<resources>
    <string name="app_name">EvidenceProtector</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_choose_firstname">Enter your First name</string>
    <string name="string_choose_lastname">Enter your Last name</string>
    <string name="string_choose_username">Choose your username</string>
    <string name="string_choose_password">Choose your password</string>
    <string name="button_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_select_option">SelectOption</string>
</resources>
